--- a/drivers/video/fbdev/msm/Makefile
+++ b/drivers/video/fbdev/msm/Makefile
@@ -71,3 +71,5 @@ subdir-ccflags-y += \
 	-Wno-parentheses-equality \
 	-Wno-duplicate-decl-specifier
 
+obj-$(CONFIG_FB_MSM_MDSS_KCAL_CTRL) += mdss_mdp_kcal_ctrl.o
+
